# elasticdump-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yaml
src/: cli.rs  elasticsearch.rs  lib.rs  main.rs  output.rs  processing.rs
src/retrieval/: messages.rs  mod.rs  progress.rs  retrieval_task.rs  search_body.rs
tests/: integration_test.rs
