[package]
name = "elasticdump-rs"
version = "0.1.0"
edition = "2024"
description = "High-performance Elasticsearch data dumper"
authors = ["elasticdump-rs"]

[dependencies]
tokio = { version = "1", features = ["full"] }
elasticsearch = { version = "8.17.0-alpha.1", features = [
    "rustls-tls",
], default-features = false }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
indicatif = "0.17"
futures = "0.3"
url = "2.4"
reqwest = { version = "0.12.15", features = [
    "json",
    "rustls-tls",
], default-features = false }
thiserror = "2.0"
base64 = "0.22"
http = "1.3"
bytesize = "2.0"
chrono = { version = "0.4", features = ["serde"] }
lipsum = "0.9"
console = "0.15"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[features]
large_scale_test = []
manual_test = []
